--- a/demo/layout/flex布局.html
+++ b/demo/layout/flex布局.html
@@ -63,6 +63,18 @@
              height: 4px;
              background: darkmagenta;
          }
+
+         .center-cs{
+             width: 560px;
+             height: 300px;
+             border : 1px solid #cccccc;
+         }
+         .center-cs a{
+             padding: 10px 15px;
+             background: darkgray;
+             text-align: center;
+             margin-right: 5px;
+         }
      </style>
 </head>
 <body>
@@ -94,13 +106,16 @@
 </div>
 
 
-<p class="mulit-ellipsis" style="height: 100px;">
-    测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢
-    测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢的
-    测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢
-    测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢
-    测试下文章怎么多行阶段显示呢测试下文章怎么多行阶段显示呢
-</p>
+<h4 class="mt15 mb15">水平垂直居中</h4>
+<div class="flex center-cs flex-row-center flex-colum-center">
+
+        <a class="block">测试01</a>
+    <a class="block">测试02</a>
+    <a class="block">测试03</a>
+    <a class="block">测试04</a>
+
+</div>
+
 <p class="tc  mt20">感谢观看 by sherlock</p>
 
 <p class="tc ">
