--- a/src/css/module/graph.css
+++ b/src/css/module/graph.css
@@ -1,7 +1,10 @@
 /*
- * 图形
- * sherlock
- * 2014/3/25 周二
+ * -----------------------------------------------------------
+ * ----------------------2014/3/25 周二------------------------
+ * ----------------------图形CSS--------------------
+ * ------------------------sherlock---------------------------
+ * -----------------------------------------------------------
+ * 重点说明:
  */
 
 
