--- a/src/css/module/text.css
+++ b/src/css/module/text.css
@@ -36,16 +36,18 @@
     text-align: center;
 }
 
-/** 针对webkit **/
-/** 多行文本显示... **/
-.mulit-ellipsis{
+/** 针对webkit 多行文本显示...  **/
+.multi-ellipsis{
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    vertical-align: baseline;
 }
+.multi-2{  -webkit-line-clamp: 2; }
+.multi-3{  -webkit-line-clamp: 3; }
+.multi-4{  -webkit-line-clamp: 4; }
+
+
 
 
 
