--- a/src/css/module/layout.css
+++ b/src/css/module/layout.css
@@ -1,7 +1,7 @@
 /*
  * -----------------------------------------------------------
  * ----------------------2014/3/25 周二------------------------
- * ----------------------流体布局CSS--------------------
+ * ----------------------布局CSS--------------------
  * ------------------------sherlock---------------------------
  * -----------------------------------------------------------
  * 重点说明:
