--- a/src/scss/module/module.css
+++ b/src/scss/module/module.css
@@ -3,6 +3,14 @@
  * sherlock221b
  * 所有css模块
  */
+/**
+ * sherlock221b
+ * rem常用设计函数
+ */
+/**
+ * sherlock221b
+ * 动画部分常用
+ */
 /** 支持ie8+ **/
 /*! normalize.css v3.0.1 | MIT License | git.io/normalize */
 /**
@@ -23,6 +31,11 @@ html {
  */
 body {
   margin: 0; }
+
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -362,26 +375,35 @@ th {
 
 /**
  * sherlock221b
- * flex布局方式
+ * flexbox布局方式
+ */
+/**
+ * 伸缩容器
+ * <div class="fx-row"></div>
  */
 .fx-row {
   display: -webkit-box;
   display: -webkit-flex;
-  display: -moz-box;
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   width: 100%; }
 
-.fx-wrap {
-  -webkit-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap; }
-
-.fx-col-1, .fx-col-2, .fx-col-3, .fx-col-4, .fx-col-5, .fx-col-6, .fx-col-7, .fx-col-8, .fx-col-9 {
+/**
+ * 伸缩项目
+ * <div class="fx-col"></div>
+ */
+.fx-col, .fx-col-1, .fx-col-2, .fx-col-3, .fx-col-4, .fx-col-5, .fx-col-6, .fx-col-7, .fx-col-8, .fx-col-9 {
   display: block;
   width: 100%; }
+
+.fx-col {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -moz-box-flex: 1;
+  -moz-flex: 1;
+  -ms-flex: 1;
+  flex: 1; }
 
 .fx-col-1 {
   -webkit-box-flex: 1;
@@ -455,7 +477,20 @@ th {
   -ms-flex: 9;
   flex: 9; }
 
-/* .row-* vertically aligns every .col in the .row */
+/**
+ * wrap策略
+ */
+.fx-wrap {
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
+
+/**
+ * 垂直方向
+ * 子元素沿着侧轴排列方式
+ * align-items : flex-start | flex-end | center | baseline | stretch;
+ */
 .fx-row-top {
   -webkit-box-align: start;
   -ms-flex-align: start;
@@ -491,7 +526,48 @@ th {
   -moz-align-items: baseline;
   align-items: baseline; }
 
-/* .col-* vertically aligns an individual .col */
+/**
+ * 水平方向
+ * 子元素沿着主轴排列方式
+ * justify-content: flex-start | flex-end | center | space-between | space-around;
+ */
+.fx-row-left {
+  -webkit-box-pack: flex-star;
+  -ms-flex-pack: flex-star;
+  -webkit-justify-content: flex-star;
+  -moz-justify-content: flex-star;
+  justify-content: flex-star; }
+
+.fx-row-middle {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center; }
+
+.fx-row-right {
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
+  justify-content: flex-end; }
+
+.fx-row-space-between {
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  justify-content: space-between; }
+
+.fx-row-space-around {
+  -ms-flex-pack: distribute;
+  -webkit-justify-content: space-around;
+  -moz-justify-content: space-around;
+  justify-content: space-around; }
+
+/**
+ * 覆盖父元素的align-items属性，定义了单独的弹性子元素如何沿着侧轴排列
+ */
 .fx-col-top {
   -webkit-align-self: flex-start;
   -moz-align-self: flex-start;
@@ -601,7 +677,9 @@ th {
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
-  /* 50%为自身尺寸的一半 */ }
+  transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%); }
 
 /**
  * sherlock221b
@@ -655,5 +733,412 @@ th {
 
 .multi-4 {
   -webkit-line-clamp: 4; }
+
+.m0 {
+  margin: 0; }
+
+.ml1 {
+  margin-left: 1px; }
+
+.ml2 {
+  margin-left: 2px; }
+
+.ml5 {
+  margin-left: 5px; }
+
+.ml10 {
+  margin-left: 10px; }
+
+.ml15 {
+  margin-left: 15px; }
+
+.ml20 {
+  margin-left: 20px; }
+
+.ml30 {
+  margin-left: 30px; }
+
+.mr1 {
+  margin-right: 1px; }
+
+.mr2 {
+  margin-right: 2px; }
+
+.mr5 {
+  margin-right: 5px; }
+
+.mr10 {
+  margin-right: 10px; }
+
+.mr15 {
+  margin-right: 15px; }
+
+.mr20 {
+  margin-right: 20px; }
+
+.mr30 {
+  margin-right: 30px; }
+
+.mt1 {
+  margin-top: 1px; }
+
+.mt2 {
+  margin-top: 2px; }
+
+.mt5 {
+  margin-top: 5px; }
+
+.mt10 {
+  margin-top: 10px; }
+
+.mt15 {
+  margin-top: 15px; }
+
+.mt20 {
+  margin-top: 20px; }
+
+.mt30 {
+  margin-top: 30px; }
+
+.mt35 {
+  margin-top: 35px; }
+
+.mb1 {
+  margin-bottom: 1px; }
+
+.mb2 {
+  margin-bottom: 2px; }
+
+.mb5 {
+  margin-bottom: 5px; }
+
+.mb10 {
+  margin-bottom: 10px; }
+
+.mb15 {
+  margin-bottom: 15px; }
+
+.mb20 {
+  margin-bottom: 20px; }
+
+.mb30 {
+  margin-bottom: 30px; }
+
+.mb35 {
+  margin-bottom: 35px; }
+
+.ml-1 {
+  margin-left: -1px; }
+
+.mr-1 {
+  margin-right: -1px; }
+
+.mt-1 {
+  margin-top: -1px; }
+
+.mb-1 {
+  margin-bottom: -1px; }
+
+.ml-3 {
+  margin-left: -3px; }
+
+.mr-3 {
+  margin-right: -3px; }
+
+.mt-3 {
+  margin-top: -3px; }
+
+.mb-3 {
+  margin-bottom: -3px; }
+
+.ml-20 {
+  margin-left: -20px; }
+
+.mr-20 {
+  margin-right: -20px; }
+
+.mt-20 {
+  margin-top: -20px; }
+
+.mb-20 {
+  margin-bottom: -20px; }
+
+.p0 {
+  padding: 0; }
+
+.p1 {
+  padding: 1px; }
+
+.pl1 {
+  padding-left: 1px; }
+
+.pt1 {
+  padding-top: 1px; }
+
+.pr1 {
+  padding-right: 1px; }
+
+.pb1 {
+  padding-bottom: 1px; }
+
+.p2 {
+  padding: 2px; }
+
+.pl2 {
+  padding-left: 2px; }
+
+.pt2 {
+  padding-top: 2px; }
+
+.pr2 {
+  padding-right: 2px; }
+
+.pb2 {
+  padding-bottom: 2px; }
+
+.pl5 {
+  padding-left: 5px; }
+
+.p5 {
+  padding: 5px; }
+
+.pt5 {
+  padding-top: 5px; }
+
+.pr5 {
+  padding-right: 5px; }
+
+.pb5 {
+  padding-bottom: 5px; }
+
+.p10 {
+  padding: 10px; }
+
+.pl10 {
+  padding-left: 10px; }
+
+.pt10 {
+  padding-top: 10px; }
+
+.pr10 {
+  padding-right: 10px; }
+
+.pb10 {
+  padding-bottom: 10px; }
+
+.p15 {
+  padding: 15px; }
+
+.pl15 {
+  padding-left: 15px; }
+
+.pt15 {
+  padding-top: 15px; }
+
+.pr15 {
+  padding-right: 15px; }
+
+.pb15 {
+  padding-bottom: 15px; }
+
+.p20 {
+  padding: 20px; }
+
+.pl20 {
+  padding-left: 20px; }
+
+.pt20 {
+  padding-top: 20px; }
+
+.pr20 {
+  padding-right: 20px; }
+
+.pb20 {
+  padding-bottom: 20px; }
+
+.p30 {
+  padding: 30px; }
+
+.pl30 {
+  padding-left: 30px; }
+
+.pt30 {
+  padding-top: 30px; }
+
+.pr30 {
+  padding-right: 30px; }
+
+.pb30 {
+  padding-bottom: 30px; }
+
+/*
+ * -----------------------------------------------------------
+ * ----------------------2014/3/25 周二------------------------
+ * ----------------------功能CSS--------------------
+ * ------------------------sherlock---------------------------
+ * -----------------------------------------------------------
+ * 重点说明:
+ * 1. 常用功能
+ */
+/** 开启硬件加速(飞起) **/
+.D3 {
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0); }
+
+/** 防止长按弹出菜单 **/
+.nus {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+/* tap颜色清空 */
+.ntp {
+  /* Prevent elements to be highlighted on tap */
+  -webkit-tap-highlight-color: transparent; }
+
+/** 防止文本调整方向变化 **/
+.tsd {
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -o-text-size-adjust: none;
+  text-size-adjust: none; }
+
+/** 响应式图片 **/
+img {
+  box-sizing: border-box;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  border: 0; }
+
+/** 响应图片 **/
+.response-img {
+  max-width: 100%;
+  height: auto;
+  display: block; }
+
+/** 全屏图片 **/
+.tile-img {
+  width: 100%;
+  height: auto; }
+
+/** 裁剪 **/
+.abs_clip {
+  position: absolute;
+  clip: rect(0 0 0 0); }
+
+/** 背景图片自适应 保持宽高比例 **/
+/** 可以使用任意一根元素实现 需要添加background 属性指定图片 **/
+.full-screen-bg {
+  position: absolute;
+  /** 绝对定位之后，上下左右四边都与手机屏幕贴紧，从而做到了适配各种屏幕 **/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  background-size: cover;
+  /** 保持图像宽高比 将图片缩放到正好完全覆盖定义的背景区域，其中有一边和背景相同 **/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover; }
+
+/*
+ * 元素可见度
+ */
+.hide {
+  display: none; }
+
+.inline {
+  display: inline; }
+
+.block {
+  display: block; }
+
+.ib {
+  display: inline-block;
+  vertical-align: middle;
+  *display: inline;
+  letter-spacing: 0;
+  *zoom: 1; }
+
+/* 绝对定位隐藏 */
+.abs_hidde {
+  position: absolute;
+  left: -999em;
+  top: -999em; }
+
+/*
+ * 字体粗细
+ */
+.font-normal {
+  font-weight: normal;
+  font-style: normal; }
+
+.font-bold {
+  font-weight: bold; }
+
+.font-italic {
+  font-style: italic; }
+
+/* pre换行*/
+.pre-warp {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  word-break: break-all; }
+
+/** 隐藏内容 seo优化 **/
+.hidden-val {
+  height: 0;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  text-indent: -9999px; }
+
+/*
+ * 浮动
+ */
+.pull-left {
+  float: left; }
+
+.pull-right {
+  float: right; }
+
+.clearFix {
+  clear: both; }
+
+/* 清除浮动需要在 浮动元素完成的下一个不浮动元素上加*/
+/* 去除浮动另外一种方法 推荐()*/
+.fix {
+  *zoom: 1; }
+
+.fix:after {
+  display: block;
+  content: "clear";
+  height: 0;
+  clear: both;
+  visibility: hidden; }
+
+/*
+ *  position
+ */
+.rel {
+  position: relative; }
+
+.abs {
+  position: absolute; }
+
+/* cursor */
+.poi {
+  cursor: pointer; }
+
+.def {
+  cursor: default; }
 
 /*# sourceMappingURL=module.css.map */
