--- a/src/scss/module/no_reset.scss
+++ b/src/scss/module/no_reset.scss
@@ -1,15 +1,7 @@
-@charset "utf-8";
-/**
- * sherlock221b
- * 所有css模块
- */
-
-
-//scss函数
 @import "../fun/fun";
 
 //reset
-@import "reset/reset";
+//@import "reset/reset";
 
 //布局
 @import "layout/layout";
@@ -22,6 +14,5 @@
 
 //属性
 @import "property/property";
-
 
 
