--- a/src/scss/module/reset/reset.scss
+++ b/src/scss/module/reset/reset.scss
@@ -24,6 +24,12 @@ body {
   margin: 0;
 }
 
+
+ul,li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 /* HTML5 display definitions
    ========================================================================== */
 
