--- a/src/scss/module/property/property.scss
+++ b/src/scss/module/property/property.scss
@@ -155,3 +155,25 @@ img{
 /* cursor */
 .poi{cursor:pointer;}
 .def{cursor:default;}
+
+
+
+//css3 方案居中
+.tran-center{
+  position: absolute;
+  top: 50%;
+  @include transform(translate(-50% , -50%));
+}
+
+.tran-ve-center{
+  position: absolute;
+  top: 50%;
+  @include transform(translateY(-50%));
+}
+
+.tr-hoz-center{
+  position: absolute;
+  top: 50%;
+  @include transform(translateX(-50%));
+}
+
