--- a/src/scss/module/h5_light.css
+++ b/src/scss/module/h5_light.css
@@ -707,6 +707,11 @@ th {
   align-items: flex-start; }
   .row > [class*="col-"] {
     box-sizing: border-box; }
+  .row.float {
+    display: block;
+    overflow: hidden; }
+  .row.float > [class*="col-"] {
+    float: left; }
   .row .col-auto {
     width: 100%; }
   .row .col-100 {
@@ -741,6 +746,57 @@ th {
     width: 10%; }
   .row .col-5 {
     width: 5%; }
+
+.col-auto {
+  width: 100%; }
+
+.col-100 {
+  width: 100%; }
+
+.col-95 {
+  width: 95%; }
+
+.col-90 {
+  width: 90%; }
+
+.col-85 {
+  width: 85%; }
+
+.col-80 {
+  width: 80%; }
+
+.col-75 {
+  width: 75%; }
+
+.col-66 {
+  width: 66.66666666666666%; }
+
+.col-60 {
+  width: 60%; }
+
+.col-50 {
+  width: 50%; }
+
+.col-40 {
+  width: 40%; }
+
+.col-33 {
+  width: 33.333333333333336%; }
+
+.col-25 {
+  width: 25%; }
+
+.col-20 {
+  width: 20%; }
+
+.col-15 {
+  width: 15%; }
+
+.col-10 {
+  width: 10%; }
+
+.col-5 {
+  width: 5%; }
 
 /**
  * sherlock221b
