--- a/src/scss/module/layout/gird.scss
+++ b/src/scss/module/layout/gird.scss
@@ -7,7 +7,13 @@
  * flexbox布局子元素切割容器 推荐采用网格
  */
 
+
+
+
+
 .row{
+
+  //flex布局
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -29,6 +35,22 @@
   &>[class*="col-"] {
     box-sizing: border-box;
   }
+
+
+
+  //浮动布局
+  &.float{
+    display: block;
+    overflow: hidden;
+  }
+
+  &.float>[class*="col-"] {
+    float: left;
+  }
+
+
+
+
 
   .col-auto {
     width: 100%;
@@ -96,4 +118,72 @@
   .col-5 {
     width: 5%;
   }
+}
+
+
+.col-auto {
+  width: 100%;
+}
+.col-100 {
+  width: 100%;
+}
+
+.col-95 {
+  width: 95%;
+}
+
+.col-90 {
+  width: 90%;
+}
+
+.col-85 {
+  width: 85%;
+}
+
+.col-80 {
+  width: 80%;
+}
+
+.col-75 {
+  width: 75%;
+}
+
+.col-66 {
+  width: 66.66666666666666%;
+}
+
+.col-60 {
+  width: 60%;
+}
+
+.col-50 {
+  width: 50%;
+}
+
+.col-40 {
+  width: 40%;
+}
+
+.col-33 {
+  width: 33.333333333333336%;
+}
+
+.col-25 {
+  width: 25%;
+}
+
+.col-20 {
+  width: 20%;
+}
+
+.col-15 {
+  width: 15%;
+}
+
+.col-10 {
+  width: 10%;
+}
+
+.col-5 {
+  width: 5%;
 }
