--- a/src/scss/module/h5_light.css
+++ b/src/scss/module/h5_light.css
@@ -700,11 +700,7 @@ th {
   -moz-box-lines: multiple;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  -webkit-align-items: flex-start;
-  align-items: flex-start; }
+  flex-wrap: wrap; }
   .row > [class*="col-"] {
     box-sizing: border-box; }
   .row.float {
