--- a/src/scss/module/layout/gird.scss
+++ b/src/scss/module/layout/gird.scss
@@ -27,10 +27,11 @@
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  -webkit-align-items: flex-start;
-  align-items: flex-start;
+
+  //-webkit-box-align: start;
+  //-ms-flex-align: start;
+  //-webkit-align-items: flex-start;
+  //align-items: flex-start;
 
   &>[class*="col-"] {
     box-sizing: border-box;
